Actualizacion colores interfaz

--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -3,6 +3,7 @@
    justify-content: center;
     font-size: 25px;
     align-items: center;
+    background-color: beige;
 }
 .input_nombre{
 margin-left: 20px;
