--- a/src/app/components/tabla-personajes-component/tabla-personajes-component.css
+++ b/src/app/components/tabla-personajes-component/tabla-personajes-component.css
@@ -1,18 +1,29 @@
 .container_table{
  
     border-collapse: separate;
-    border-color: black;
+    border-color: #ddd;
     width: 100%;
 }
 
 table{
   border-collapse: collapse;
+   
 }
 th, td {
-  border: 1px solid black; 
+  border: 1px solid #ddd; 
   padding: 8px;            
-  text-align: left;     
+  text-align: left; 
+     
 }
 tr:hover{
 cursor: pointer;
+}
+
+.encabezados{
+  
+  background-color:#3333;
+
+}
+.tabla_informacion{
+  background-color: #f7f7f7;
 }
